[gd_scene load_steps=7 format=2]

[ext_resource path="res://creatures/creatures.tscn" type="PackedScene" id=1]
[ext_resource path="res://global/ReferenceList/Sprites/Enermies/Zombie.tres" type="SpriteFrames" id=2]
[ext_resource path="res://creatures/enermy/Enermy.gd" type="Script" id=3]
[ext_resource path="res://art/temp/EnermySight.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 40 )

[node name="Enermy" type="KinematicBody2D" groups=[
"enermy",
]]
z_index = 10
collision_layer = 20
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4, -22 )
scale = Vector2( 4, 4 )
frames = ExtResource( 2 )
animation = "normal_walk_right"
frame = 7
speed_scale = 0.7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CreatureStatus" parent="." instance=ExtResource( 1 )]

[node name="AttackColdTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RigidTimer" type="Timer" parent="."]
one_shot = true

[node name="DisappearTimer" type="Timer" parent="."]
one_shot = true

[node name="RaiseGuardTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RandomMoveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SightSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.580392 )
scale = Vector2( 10, 10 )
z_index = 800
z_as_relative = false
texture = ExtResource( 4 )
offset = Vector2( -0.5, -3 )

[node name="DamageAreas" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageAreas"]
visible = false
position = Vector2( 20, 0 )
shape = SubResource( 2 )

[connection signal="timeout" from="AttackColdTimer" to="." method="_on_AttackColdTimer_timeout"]
[connection signal="timeout" from="RigidTimer" to="." method="_on_RigidTimer_timeout"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
[connection signal="timeout" from="RandomMoveTimer" to="." method="_on_RandomMoveTimer_timeout"]
